# knn-hpc

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .cmake-format.yml  .gitignore  CMakeLists.txt  CMakePresets.json  gcovr.cfg
.github/workflows/: ci.yaml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Dependencies.cmake  Doxygen.cmake  Hardening.cmake  LibFuzzer.cmake  Linker.cmake  OptimizeForArchitecture.cmake  PackageProject.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  VCEnvironment.cmake
configured_files/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  main.cpp
src/calculator/: calculator.h
src/core/: dataset.cpp  dataset.h  distance.cpp  distance.h  hash.h  message.h  strings.cpp  strings.h  utils.h  vec2.h  vec4.h
src/knn/: classifier.cpp  classifier.h  distance.cpp
test/: CMakeLists.txt  tests.cpp
